cmake_minimum_required(VERSION 3.28)
project(algorithms_c C)

set(CMAKE_C_STANDARD 23)

add_executable(algorithms_c main.c)
add_executable(704 binary_search/704.c)
add_executable(374 binary_search/374.c)
add_executable(35 binary_search/35.c)
add_executable(34 binary_search/34.c)
add_executable(153 binary_search/153.c)
add_executable(154 binary_search/154.c)
add_executable(33 binary_search/33.c)
add_executable(81 binary_search/81.c)
add_executable(278 binary_search/278.c)
